--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .bg-img {
-  /* The image used */
+  /* Fondo de Home */
   background-image: url(./images/BG_Mascotas.png);
   min-height: 380px;
-  /* Center and scale the image nicely */
+  /* Centrar la imagén del home */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* Needed to position the navbar */
+  /* Necesario si se pone un NavBar */
   position: relative;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .myDiv {
-  border: 5px outset red;
+  border: 5px outset rgb(255, 238, 0);
   background-color: lightblue;
   text-align: center;
 }
